--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <title>devfinder</title>
-    <script type="module" crossorigin src="/assets/index.70b97931.js"></script>
-    <link rel="stylesheet" href="/assets/index.62f502b0.css">
+    <script type="module" crossorigin src="/UserSearch/assets/index.70b97931.js"></script>
+    <link rel="stylesheet" href="/UserSearch/assets/index.62f502b0.css">
   </head>
   <body>
     <div id="root"></div>
